samples/_failures_safe/1761557909_a96ea4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d1b5254f.c: In function ‘next_token’:
./samples/SAFE/__tmp_d1b5254f.c:165:13: error: expected declaration or statement at end of input
  165 |             }
      |             ^
./samples/SAFE/__tmp_d1b5254f.c:165:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d1b5254f.c:165:13: error: expected declaration or statement at end of input
